# ORbitGFX_PlayGround

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: simple.frag  simple.vert
assets/shaders/: main_frag.glsl  main_vert.glsl  surface_frag.glsl  surface_vert.glsl
include/: math.hpp  mesh.hpp  test.hpp
include/camera/: editorCamera.hpp
include/loaders/: imageLoader.hpp  meshLoader.hpp  shaderModuleLoader.hpp
include/renderGraph/: renderGraph.hpp
include/renderGraph/mainPasses/: surfacePass.hpp
include/renderGraph/offscreenPasses/: offscreenPass.hpp
src/: imageLoader.cpp  main.cpp  shaderModuleLoader.cpp
src/camera/: editorCamera.cpp
src/loaders/: imageLoader.cpp  meshLoader.cpp  shaderModuleLoader.cpp
src/renderGraph/: renderGraph.cpp
src/renderGraph/offscreenPasses/: offscreenPass.cpp
